add huawei network product page

--- a/gooverseas/gooverseas_case.html
+++ b/gooverseas/gooverseas_case.html
@@ -30,7 +30,7 @@
 				<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item active"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -69,7 +69,7 @@
 		<div id = "rowBlogs" class="row" class = "wrapper">
 			<div id = "dBlogs" class="col-md-6 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('../images/investment.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../news/20230424/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
@@ -77,7 +77,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>国内赴西班牙考察团接待</a></h3>
-						<p>2023年4月，华为组织国内互联网公司欧洲考察，在西班牙期间，CEO Yanik作为本地资深经济学者，陪同各大公司CEO参观考察西班牙xxxxx。</p>
+						<p>2023年4月，华为组织国内互联网公司欧洲考察团，在西班牙考察期间，CEO Yanik作为西班牙资深经济学者，陪同各大公司CEO参观考察西班牙对外投资局、马德里商会、大型投行和律所。</p>
 					</div>
 				</div>
 			</div>
@@ -85,7 +85,7 @@
 
 			<div class="col-md-6 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('../images/asset-management.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../gooverseas/hr/hr.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
 							<span class="yr">2023</span>
@@ -93,7 +93,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>高级人才猎聘服务</a></h3>
-						<p>西班牙某中资企业H公司有在伊比利亚寻求精通中英西葡语IT技术人才，睿泽国际作为高级猎头顾问，为其在全球范围内寻求人才，最终觅得合适人才，为H公司业务添砖加瓦。</p>
+						<p>为西班牙某中资企业H公司在伊比利亚猎聘精通中英西葡语高端IT技术人才，睿泽国际作为高级猎头顾问，为其在全球范围内寻求合适人才，最终H公司从多名候选人中招聘到理想人才。</p>
 					</div>
 				</div>
 			</div>
@@ -190,7 +190,7 @@
 						<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -220,8 +220,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
