--- a/investment.html
+++ b/investment.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: 100%" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -30,7 +30,7 @@
 				<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
 				<li class="nav-item active"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -77,7 +77,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment/investment/investment_projects.html">金融投资项目</a></h3>
-						<p>睿泽国际CEO Yanik作为在欧洲从业20余年资深金融投行专家，具有欧洲金融投资顾问执照EFA，为高净值客户提供专属，量身定制最佳风险收益全球配置解决方案。</p>
+						<p>睿泽国际CEO Yanik作为在欧洲从业20余年资深金融投行专家，具有欧洲上市保荐人资格，持有欧洲金融投资顾问执照EFA和美国异类金融投资分析师执照CAIA，为高净值客户提供量身定制最佳风险收益全球配置解决方案。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="investment/investment/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
@@ -98,7 +98,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment/investment/asset_projects.html">资产管理</a></h3>
-						<p>睿泽国际CEO Yanik作为在欧洲唯一具有资产管理执照华人，面对高净值人士全球资产配置需求，提供一对一私人银行和家族资产规划管理。</p>
+						<p>睿泽国际CEO Yanik作为在伊比利亚唯一持有资产管理执照华人，为HNW高净值人士全球资产配置需求，提供专属私人银行和家族资产管理服务。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="investment/investment/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -117,7 +117,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment/mapfre/mapfre_seguro.html">保险业务</a></h3>
-						<p>睿泽国际作为西班牙最大保险公司MAPFRE合作伙伴，为企业提供全方位保险产品，点击查看产品目录</p>
+						<p>睿泽国际作为西班牙最大保险公司MAPFRE高级合作伙伴和金融资产管理顾问，为企业提供全方位保险产品，点击查看产品目录。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="investment/mapfre/mapfre_seguro.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -248,7 +248,7 @@
 						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -278,8 +278,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
