--- a/investment/investment_case.html
+++ b/investment/investment_case.html
@@ -30,7 +30,7 @@
 				<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item active"><a href="../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -76,8 +76,8 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a></a>华意压缩收购西班牙Cubig</h3>
-						<p>华意压缩机集团是国内上市公司。曾经排名全球压缩机行业第四，收购排名第三的西班牙Cubig压缩机公司。将西班牙Cubig公司的债务剥离， 收购了其生产主体，包括生产和管理团队与不动产设备。 最终一跃站上了全球压缩机行业的第二把交椅。</p>
-						<p>睿泽国际CEO Yanik作为该收购项目主导人，从中多方协调，最终双方达成都满意的条款，最终完成收购。</p>
+						<p>华意压缩机集团是国内上市公司，曾经排名全球压缩机行业第四，收购排名第三的西班牙Cubig压缩机公司。将西班牙Cubig公司的债务剥离，收购了其生产主体，包括生产和管理团队与不动产设备，最终一跃坐上了全球压缩机行业的第二把交椅。</p>
+						<p>睿泽国际CEO Yanik代表投行参与此项目，从中协调，为此收购项目提供了资金支持，最终完成收购。</p>
 					</div>
 				</div>
 			</div>
@@ -93,8 +93,9 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>爱尔眼科收购西班牙Clinic Barviera</a></h3>
-						<p>爱尔收购欧洲专业眼科机构股票定增。 独家承销被爱尔眼科收购的Clinic Barviera，在西班牙资本市场股票定增发行业务为股票估值定价，召开国际投资机构路演，各类机构，家族办公室等 投资者说明，与各家投资机构磋商对价和收购份额；国际股权交易，香港证交所共同配合，成功完成交易。</p>
-						<p>睿泽国际CEO Yanik作为该收购项目主导人，并购期间出差往返中国、西班牙多次，最终双方达成都满意的条款，最终完成收购。</p>
+						<p>爱尔收购欧洲专业眼科机构股票定增业务。独家承销被爱尔眼科收购的Clinic Barviera，在西班牙资本市场股票定增发行业务，
+							为股票估值定价，召开国际投资机构路演，各类机构、家族办公室等投资者说明会，与各家投资机构磋商对价和收购份额；国际股权交易，香港证交所共同配合，成功完成交易。</p>
+						<p>睿泽国际CEO Yanik作为该项目主导人，从项目初期开始与多家国际顶级投行竞争，拿到独家承销权，历经数月往返于国内、香港、西班牙多地，协调多方机构共同配合，最终圆满完成发行业务。</p>
 					</div>
 				</div>
 			</div>
@@ -189,7 +190,7 @@
 						<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -219,8 +220,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
