--- a/ittech/cloud/cloud.html
+++ b/ittech/cloud/cloud.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 120px; width: 100%"src="../../images/logo.png"/></a>
+		<a class="navbar-brand" href="../../index.html"><img class="logo_img" style="height: 90px; width: 100%"src="../../images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -30,7 +30,7 @@
 				<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item active"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="../../products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
@@ -74,7 +74,11 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="huawei/huaweicloud.html">华为云 一切皆服务</a></h3>
-						<p>华为云持续创新，携手客户，让云无处不在，让智能无所不及，共建智能世界云底座。提供给租户安全的云产品和服务，构建安全可信的云服务。</p>
+						<p>华为云持续创新，携手客户，让云无处不在，让智能无所不及，共建智能世界云底座，提供给租户安全的云产品和服务，构建安全可信的云服务。
+							基于丰富的华为云基础服务，提供适用于各行业的、预集成的产品与能力的组合，以满足企业ICT业务上云的需求</p>
+						<p>华为云针对企业所在行业推出了通用企业上云解决方案与行业解决方案。</p>
+						<p>其中企业解决方案包括：企业迁移上云、企业数据、企业管理、企业出海、企业建站等。</p>
+						<p>行业解决方案包括：互联网、金融、制造业、电信、交通、物流、医疗、教育、传媒等。</p>
 					</div>
 				</div>
 			</div>
@@ -196,7 +200,7 @@
 						<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="../../products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
@@ -226,8 +230,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
