--- a/ittech/ittech_case.html
+++ b/ittech/ittech_case.html
@@ -30,7 +30,7 @@
 				<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item active"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -76,7 +76,8 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>西班牙本地企业采用华为云技术打造电商网站</a></h3>
-						<p>睿泽国际作为华为云在欧洲的代理商，成功将最新的云技术推广到西班牙本地客户，公司技术人员与客户CTO以及技术工程师对接技术细节，并对其进行相关培训，后期专门团队进行跟踪服务，为客户解决实际技术问题。</p>
+						<p>睿泽国际作为华为云和法电云（Orange）在欧洲的合作伙伴，成功将最新的云技术推广到西班牙本地客户。睿泽国际作为技术顾问，公司技术人员与客户CTO以及技术工程师进行架构设计与技术细节对接，协助其完成业务上线。
+							前期专门技术人员对其进行相关培训，后期专门团队进行跟踪服务，为客户解决实际技术问题。同时睿泽国际作为伙伴支撑客户营销活动，最终取得圆满成功。</p>
 					</div>
 				</div>
 			</div>
@@ -92,7 +93,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>园区网络产品解决方案合作</a></h3>
-						<p>睿泽国际与锐捷网络对本地西班牙客户进行持续跟踪，针对有潜在需求的客户进行高层拜访，公司CEO Yanik与高层具有良好的客户关系，可在与公司提供金融服务的同时提供相对应的IT技术解决方案，最终达到双赢。</p>
+						<p>睿泽国际与中资科技企业达成战略合作对本地西班牙NA客户进行持续跟踪，针对有潜在需求的客户进行高层拜访，公司CEO Yanik与高层具有良好的客户关系，可在与公司提供金融服务的同时提供相对应的IT技术解决方案，最终达到双赢。</p>
 					</div>
 				</div>
 			</div>
@@ -188,7 +189,7 @@
 						<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -218,8 +219,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
