--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: 100%" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item active"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -70,7 +70,7 @@
 					<p>公司与西班牙政府、中国政府部门、西班牙企业、中资企业之间的密切沟通合作，为中资企业在西营商起到桥梁的作用，主要业务范围包括：</p>
 					<p>1）金融保险服务：为企业寻找高收益投资机会，为企业寻找项目资金；为企业提供保险业务包括公司财产保险、员工医疗保险、公司事故险等，</p>
 					<p>2）企业IT技术解决方案：为企业在西营商提供办公基础IT设施服务，包括办公室及园区基础网络建设、企业办公软件、企业云基础设施、安保系统、企业太阳能电力，等。</p>
-					<p>3）产品代理：作为代理商代理企业产品在西销售，并在西推广运营产品。</p>
+					<p>3）渠道拓展：作为代理商代理企业产品在西销售，并在西推广运营产品。</p>
 					<p>4）中资落地服务：作为中资企业出海孵化器，帮助企业解决出海初期的公司相关事宜，为企业提供专业的西葡人才猎聘服务，为企业提供市场营销策划以及执行服务。</p>
 					<br>
 					<p>当前公司已与solventis、MAPFRE、华为、VIVO、海康威视、锐捷网络、ORANGE、小米、OPPO、弘正、中国移动、马德里商会、加泰罗尼亚企业发展局、中国商会、Zaragoza旅游开发局、
@@ -105,7 +105,7 @@
 					<div class="services-2 d-flex">
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
 						<div class="text">
-							<a href="products.html"><h2>产品代理</h2></a>
+							<a href="products.html"><h2>渠道拓展</h2></a>
 							<a href="products/mobile/mobile.html"><h5>智能手机</h5></a>
 							<a href="products/network/network.html"><h5>网络设备</h5></a>
 							<a href="products/security/security.html"><h5>安防设备</h5></a>
@@ -269,7 +269,7 @@
 						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -299,8 +299,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
