--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
+            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: 100%" src="images/logo.png"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                     <li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
                     <li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-                    <li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+                    <li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
                     <li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
                     <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -48,7 +48,7 @@
                     <p class="breadcrumbs">
                         <span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
                         <span class="mr-2"><a href="about.html">About <i class="ion-ios-arrow-forward"></i></a></span>
-                        <span class="mr-2"><a href="news.html">news <i class="ion-ios-arrow-forward"></i></a></span></div>
+                        <span class="mr-2"><a href="news.html">news <i class="ion-ios-arrow-forward"></i></a></span>
                 </div>
             </div>
         </div>
@@ -267,7 +267,7 @@
                             <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                             <li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
                             <li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-                            <li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+                            <li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
                             <li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
                             <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -297,8 +297,7 @@
                 <div class="col-md-12 text-center">
                     <p>
                         Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-                        <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
                     </p>
                 </div>
             </div>
