--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 100%" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: 100%" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -30,7 +30,7 @@
 				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">首页</a></li>
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -56,10 +56,10 @@
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
-					<h2 style = "color: #f7f8f8">Emproving Minds, Building Future</h2>
+					<h2 style = "color: #f7f8f8">Improving Minds, Building Future</h2>
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
+						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
 						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
@@ -75,7 +75,7 @@
 					<h2 style = "color: #f7f8f8">启迪智慧，创造未来</h2>
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
+						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
 						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
@@ -88,10 +88,10 @@
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
-					<h2 style = "color: #f7f8f8">Emproving Minds, Building Future</h2>
+					<h2 style = "color: #f7f8f8">Mejorar Mentes, Construir Futuro</h2>
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
+						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
 						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
@@ -101,17 +101,17 @@
 
 </section>
 
-<div class="row">
-	<div class="col-md-12 text-center heading-section ftco-animate">
-		<br>
-		<h2 class="mb-4"><span>睿泽国际</span>服务目标</h2>
-	</div>
-	<div class="col-md-12 text-center heading-section ftco-animate" style="background-image: url(images/bg_10.jpg);">
-		<br>
-		<h1 class="mb-4" style="color: #fdfafa">针对中资企业海外业务提供以下服务：</h1>
-		<h1 class="mb-4" style="color: #fdfafa">战略、投资、经贸企业对接、渠道拓展、高级人才猎聘等</h1>
-	</div>
-</div>
+<!--<div class="row">-->
+<!--	<div class="col-md-12 text-center heading-section ftco-animate">-->
+<!--		<br>-->
+<!--		<h2 class="mb-4"><span>睿泽国际</span>服务目标</h2>-->
+<!--	</div>-->
+<!--	<div class="col-md-12 text-center heading-section ftco-animate" style="background-image: url(images/bg_10.jpg);">-->
+<!--		<br>-->
+<!--		<h1 class="mb-4" style="color: #fdfafa">针对中资企业海外业务提供以下服务：</h1>-->
+<!--		<h1 class="mb-4" style="color: #fdfafa">战略、投资、经贸企业对接、渠道拓展、高级人才猎聘等</h1>-->
+<!--	</div>-->
+<!--</div>-->
 
 
 
@@ -128,7 +128,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment.html">金融保险</a></h3>
-						<p>睿泽国际CEO Yanik Yang作为在欧洲从业二十余年投行专家，为您提供最优质的金融保险服务。</p>
+						<p>睿泽国际CEO Yanik Yang作为在欧洲从业二十余年金融投资专家，为您提供最优质的金融投资与保险服务。</p>
 					</div>
 				</div>
 			</div>
@@ -157,8 +157,8 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="products.html">产品代理</a></h3>
-						<p>睿泽国际为企业在西班牙境内代理产品销售，并为企业提供B2B产品购买服务。</p>
+						<h3 class="heading"><a href="products.html">渠道拓展</a></h3>
+						<p>睿泽国际为企业在伊比利亚半岛和拉美市场进行渠道拓展，与当地企业进行商务对接，并代理产品B2B销售。</p>
 					</div>
 				</div>
 			</div>
@@ -172,7 +172,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="gooverseas.html">中资落地服务</a></h3>
-						<p>睿泽国际为中资出海企业提供端到端全方位服务，包括企业欧洲实体公司代理、本地公司注册、人才猎聘、市场营销活动策划以及承办等相关业务。</p>
+						<p>睿泽国际为中资出海企业提供端到端服务，代表未出海企业进行欧洲本地商业活动，包括欧洲本地公司注册、人才猎聘、市场营销活动策划与执行等相关业务。</p>
 					</div>
 				</div>
 			</div>
@@ -222,7 +222,7 @@
 							<div class="text bg-white p-2">
 								<div class="px-1">
 									<H4>IT解决方案案例介绍</H4>
-									<p>西班牙本土华人企业G公司，其新上线电商业务采用了最新云技术，睿泽国际作为软件架构顾问，并协助其营销活动。</p>
+									<p>西班牙本地企业G公司，其新上线电商业务采用了最新云技术，睿泽国际作为技术顾问，协助其完成业务上线，并参与其营销活动。</p>
 								</div>
 								<div class="d-flex align-items-center mt-4">
 									<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
@@ -241,10 +241,10 @@
 						<div class="col-md-12  col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
 							<div class="text bg-white p-2">
 								<div class="px-1">
-									<H4>产品代理案例介绍</H4>
-									<p>BOI已于VIVO、XIAOMI、等智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务。</p>
+									<H4>渠道拓展案例介绍</H4>
+									<p>睿泽国际已于VIVO等多家智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务，并从中协调与MAPFRE达成战略协议进行商业互补。</p>
 								</div>
-								<div class="d-flex align-items-end mt-4" st>
+								<div class="d-flex align-items-end mt-4" >
 									<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 								</div>
 							</div>
@@ -256,13 +256,12 @@
 			<div class="col-md-12 col-lg-12 ftco-animate ">
 				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
-
 						<div class="img col-md-12 col-lg-3 ftco-animate" style="background-image: url(images/service4.jpg);"></div>
 						<div class="col-md-12 col-lg-9 ftco-animate p-0" style = "background-color: #f8f9fc">
 							<div class="text bg-white p-2">
 								<div class="px-1">
 									<H4>中资落地案例介绍</H4>
-									<p>BOI已与多家中企签署协议，代理企业西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
+									<p>睿泽国际已与多家中企签署协议，代理企业在西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
 								</div>
 								<div class="d-flex align-items-center mt-4">
 									<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
@@ -526,7 +525,7 @@
 						<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
@@ -556,8 +555,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
