--- a/products/products_case.html
+++ b/products/products_case.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item active"><a href="../products.html" class="nav-link">产品代理</a></li>
+				<li class="nav-item active"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
-				<a href="../products.html"><h3 class="mb-2 bread">产品代理</h3></a>
+				<a href="../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
 				<p class="breadcrumbs">
 				<p>
 					<a href="../products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
@@ -89,8 +89,8 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a>小米与MAPFRE战略合作</a></h3>
-						<p>睿泽国际最为MAPFRE高级合作伙伴，与小米西班牙公司达成战略合作协议，在小米门店与MAPFRE门店达成商业互补，共同促进产品销售。</p>
+						<h3 class="heading"><a>与MAPFRE战略合作</a></h3>
+						<p>睿泽国际最为MAPFRE高级合作伙伴，为其推广企业业务和资产管理业务，为其与多家中资企业达成战略合作，形成商业互补，共同促进产品销售。</p>
 					</div>
 				</div>
 			</div>
@@ -186,7 +186,7 @@
 						<li class="nav-item"><a href="../index.html" class="nav-link">首页</a></li>
 						<li class="nav-item"><a href="../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../ittech.html" class="nav-link">企业IT技术</a></li>
-						<li class="nav-item"><a href="../products.html" class="nav-link">产品代理</a></li>
+						<li class="nav-item"><a href="../products.html" class="nav-link">渠道拓展</a></li>
 						<li class="nav-item"><a href="../others.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../about.html" class="nav-link">关于睿泽</a></li>
@@ -216,8 +216,7 @@
 			<div class="col-md-12 text-center">
 				<p>
 					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-					<i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
 		</div>
